2005-09-06  Inaki Larranaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" to all_linguas.

2005-09-05  Sarfraaz Ahmed <asarfraaz@novell.com>

	* 2.4.0 tagged !!!
	* NEWS : Updated with the 2.4.0 release info

2005-08-30  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder) : Insert into the
	hash table only when the folder construction succeeds.
	* mail/mail-stub-exchange.c (get_folder_online) : Changed the return
	type to indicate failure.
	(get_folder) : Returns on failure of online code.
	** Fixes #314573.
	
2005-08-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Updated the version number to 2.4.0

2005-08-28  Praveen Kumar  <kpraveen@novell.com>

	* camel/camel-exchange-provider.c : Reverting the change made in
	revision 1.25 as that fix is broken by some other change in 
	Camel. Adding the hide host mask again.
	
2005-08-27  Sarfraaz Ahmed <asarfraaz@novell.com>

	* AUTHORS : Updated the credits
	* calendar/e-cal-backend-exchange.c (init) : Dont init the mode here.

2005-08-26  Arunprakash  <arunp@novell.com>

	* addressbook/e-book-backend-exchange.c (e_book_backend_exchange_init):
	Set the default mode to local.
	* addressbook/e-book-backend-gal.c (set_mode) : Removed exchange
	account set offline and connect calls, as they should be called
	by appropriate listeners.
	* calendar/e-cal-backend-exchange.c (set_mode) : Similar.
	(init) : Set the default mode to local.
	* camel/camel-exchange-store.c (camel_exchange_forget_password) : Newly
	added to forget the password in case of wrong password.
	(exchange_connect) : Updated to properly ask and forget password in
	needed cases.
	(init) : Added a new connect_lock mutex for offline mode.
	* mail/mail-stub-exchange.c (get_folder_online) : Flushes the status
	channel if called in background.
	(stub_connect) : Updated to return failure only when connection fails.
	Removed the linestatus signal handler as it is done while connecting.